# poem

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CMakeGraphVizOptions.cmake  CMakeLists.txt  IDEAS.txt  LICENSE  README.md  ci-ssh.sh  package.sh  pyproject.toml  requirements-dev.txt  setup.py  ssh.sh
ci-utils/: .cpppoem.yml  .libpoem.yml  .pypoem.yml
cmake/: Add_argparse.cmake  Add_argparse_bak.cmake  Add_boost.cmake  Add_cmake_ref.cmake  Add_curl.cmake  Add_dtree.cmake  Add_dunits.cmake  Add_fmt.cmake  Add_glob.cmake  Add_googletest.cmake  Add_hdf5.cmake  Add_hermes.cmake  Add_json.cmake  Add_mathutils.cmake  Add_netcdf-c.cmake  Add_netcdf-cxx4.cmake  Add_pybind11.cmake  Add_semver.cmake  Add_spdlog.cmake  Add_version.cmake  Add_zlib.cmake  URL.conf.cmake  git_watcher.cmake
cmake/patches/: curl_7.84.0.patch  netcdf-c_v4.8.1.patch  netcdf-cxx4_v4.3.1.patch  zlib_v1.2.12.patch
docker/: install.sh
docs/: requirements.txt
docs/API/: Doxyfile
docs/API/cpp/: Doxyfile.in  make.sh
docs/guide/source/: conf.py  definitions.rst
docs/source/: index.rst
docs/specifications/: conf.py  data_model_definitions.rst  index.rst  specifications.rst
docs/specifications/.entangled/: sphinx_conf.py
docs/specifications/documentation/: poem_data_model.rst  poem_features.rst  poem_in_a_nuttshell.rst  poem_polar_modes.rst  poem_polar_types.rst  poem_specifications.rst  rules_v0.rst  rules_v1.rst
docs/specifications/python_examples/: POEM_specs_v0_minimal_example.py  POEM_specs_v1_minimal_example.py
docs/specifications/usage/: cpp-lib.rst  pypoem.rst
docs/specifications/v0/: data_model_definitions.rst  index.rst  specifications.rst
docs/specifications/v1/: Draft_rules_v1.txt  data_model_definitions.rst  index.rst  polar_types.rst  specifications.rst
dtwin/: dtwin.txt  dtwin_ballast_one_engine.json  dtwins.json
python/: CMakeLists.txt  _version.py.in  pypoem.cpp
python-src/poem/: __init__.py
python-src/pypoem/: __init__.py
python/pypoem/: __init__.py
python/pypoem/tools/: README.txt  poem_check.py  poem_clean.py  poem_graph.py  poem_hash.py  poem_info.py  poem_layout.py  poem_mount.py  poem_tree.py  poem_upgrade.py  poem_version.py
schemas/: 1.json  2.json
scheme/: 1.json  2.json
scripts/: HOWTO.txt  README.txt  build_and_install_pypoem.bat  build_and_install_pypoem.sh  install_docker_rootless.sh  package.sh  uninstall_docker_rootless.sh
src/: CMakeLists.txt
src/poem/: Attributes.cpp  Attributes.h  CMakeLists.txt  Common.h  Dimension.cpp  Dimension.h  DimensionGrid.cpp  DimensionGrid.h  DimensionPoint.cpp  DimensionPoint.h  DimensionSet.cpp  DimensionSet.h  Dimensional.cpp  Dimensional.h  Dimensions.h  IO.cpp  IO.h  IO.inl  JIT.cpp  JIT.h  Monitor.cpp  Monitor.h  Named.cpp  Named.h  OperationMode.cpp  OperationMode.h  PerformancePolarSet.h  PerformancePolarSetReader.h  PerformancePolars.h  Polar.cpp  Polar.h  PolarNode.cpp  PolarNode.h  PolarSet.cpp  PolarSet.h  PolarSetReader.h  PolarTable.cpp  PolarTable.h  PolarTable.inl  PolarType.h  (+18 more)
src/poem/json/: CMakeLists.txt  JSONScheme.cpp  JSONScheme.h  PolarVersions.cpp  PolarVersions.h
src/poem/polar/: Attributes.h  Common.h  Dimensions.h  Dimensions_.h  Polar.h  PolarPoint.h  PolarSet.h  Splitter.h  Variables.h
src/poem/polars/: NDPolar.h  NDPolar.hpp  NetCDF.h
src/poem/reader/: CMakeLists.txt  PolarReader.cpp  PolarReader.h
src/poem/schema/: CMakeLists.txt  Schema.cpp  Schema.h  Schema.hpp  SchemaChecker.cpp  SchemaChecker.h  TODO_schema.txt  next_gen_polar.json  schema.h  schema.h.in  schema.json
src/poem/schema/test/: 1.json  CMakeLists.txt  schema.h.in  schema.json  schema_test.h.in  schema_test.json
src/poem/specifications/: SpecRules.h  SpecRulesBase.h  SpecRulesChecker.h  check_v0.cpp  check_v0.h  check_v1.cpp  check_v1.h  spec_checkers.h  spec_rules.h  spec_rules_base.h  spec_v0.cpp  spec_v0.h  spec_v1.cpp  spec_v1.h  specs.h
src/poem/specifications/rules/: rules.h  rules_v0.h  rules_v1.h
src/poem/specs_checking/: SpecChecker.h
src/poem/specs_checking/rules/: rules_v0.h
src/poem/units/: units.h
src/poem/versions/: versions.h
src/poem/writer/: CMakeLists.txt  PolarWriter.cpp  PolarWriter.h  Writer.cpp  Writer.h
src/poem2/: CMakeLists.txt  DimensionGrid.h  DimensionSet.h  IO.h  Named.h  OperationMode.h  Polar.h  PolarTable.h  PolarTree.h  PolarTreeNode.h  exceptions.h  poem.h  poem2.h  version.h.in
src/poem_old/: exceptions.h
src/poem_old/json/: PolarVersions.h
src/poem_old/polars/: CMakeLists.txt  NetCDF.cpp
src/pypoem/: CMakeLists.txt  PyWrapper.cpp  PyWrapper.h  __init__.py  pypoem.cpp  pypoem.h
src_bak/poem/: attributes.h  dimensions.h  poem.h  polar_type.h  reader.h  splitter.h
src_bak/poem/specifications/: spec_rules.h
tests/: CMakeLists.txt  first.cpp  test_enable_if.cpp  test_json_scheme.cpp  test_load_polar5D.cpp  test_poem.cpp  test_polar_compat.cpp  test_polar_concatenation.cpp  test_polar_creation.cpp  test_read_netcdf.cpp  test_read_poem.cpp
tests/poc/: CMakeLists.txt  non_template_polars.cpp
tests/poem/: CMakeLists.txt  poem_tests.cpp  resources.cmake  test_CRTP_polar_table.cpp  test_dimension_point_set.cpp  test_performance_polar_set.cpp  test_poem.cpp  test_polar.cpp  test_polar_set.cpp  test_polar_slicing.cpp  test_read_poem.cpp
tests/poem2/: CMakeLists.txt  test_poem2.cpp
tests/poem_old/: poem_tests.cpp  resources.cmake  test_polar_set.cpp  test_polar_slicing.cpp
tests/poem_old/to_fix/: test_read_netcdf.cpp
tests/pypoem/: pypoem.py  target_syntax.py  test_polarplot_use_case.py  test_pypoem.py  test_read_poem.py  test_read_pypoem.py  test_reader.py  test_tools.py
tests/pypoem_old/: test_read_poem.py
tests/test_schemas/: schema_new.json  schema_old.json
tests/unit/: CMakeLists.txt  unit_test.cpp
tests/unit/scheme/: 1.json  2.json  3.json
tests_old/unit/scheme/: 1.json  (+1 more)
tools/: CMakeLists.txt  POEM_specs_minimal_example.py  TODO.txt  merge_v0_polars.cpp  nc_file_manipulation.h  poem_cli.cpp  poem_cli_new.cpp  poem_downgrade_v1_to_v0.cpp  poem_v0_to_v1.py  polar_hash.py  polardump.cpp
tools/converters/: poem_v0_to_v1.py
(+2 files in other folders)
