# TODO: retirer le CMakeLists.txt et le pypoem.cpp du packaging


[build-system]
#requires = ["scikit-build-core", "pybind11"]
requires = ["scikit-build-core"]
#requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "scikit_build_core.build"

[project]
name = "pypoem"
# For dynamic version:
# https://scikit-build-core.readthedocs.io/en/latest/configuration.html#dynamic-metadata
# https://github.com/pypa/setuptools-scm/blob/fb261332d9b46aa5a258042d85baa5aa7b9f4fa2/README.rst#git-archives

#metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

version = "0.1-7" # TODO: gerer dynamiquement les versions a partir des tags git -> only tags dans la ci pour le deploy
dynamic = ["version"]

description = "Performance pOlar Exchange forMat"
readme = "README.md"
maintainers = [{ name = "D-ICE ENGINEERING", email = "francois.rongere@dice-engineering.com" }]
requires-python = ">=3.9"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/D-ICE/poem"
Documentation = "https://dice-poem.readthedocs.io/en/latest/"

#[project.scripts] # Pour ajouter un outil cli...
#cliapp = "package.__main__:main"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/pypoem/_version.py"]
build.verbose = false

cmake.version = ">=3.20"
cmake.build-type = "Release"
cmake.args = [
    "-DPOEM_BUILD_TESTS=OFF",
    "-DPOEM_BUILD_TOOLS=OFF", # TODO: voir pour installer exe ?
    "-DPOEM_ALLOW_DIRTY=OFF",
    "-DPOEM_BUILD_PYTHON=ON",
    "-DPOEM_BUILD_POC=OFF",
]
build-dir = "build"
build.targets = ["pypoem"]
#build.tool-args = ["-j6"]

[tool.setuptools_scm]  # Section required
write_to = "src/pypoem/_version.py"