# TODO: retirer le CMakeLists.txt et le pypoem.cpp du packaging


[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "pypoem"
# For dynamic version:
# https://scikit-build-core.readthedocs.io/en/latest/configuration.html#dynamic-metadata
# https://github.com/pypa/setuptools-scm/blob/fb261332d9b46aa5a258042d85baa5aa7b9f4fa2/README.rst#git-archives

dynamic = ["version"]

description = "Performance pOlar Exchange forMat"
readme = "README.md"
maintainers = [{ name = "D-ICE ENGINEERING", email = "francois.rongere@dice-engineering.com" }]
requires-python = ">=3.9"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
#    "Operating System :: Microsoft :: Windows",
#    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
#    "Development Status :: 5 - Production/Stable",
#    "Typing :: Typed",
]

dependencies = [
    "argparse",
    "sha256",
    "pydot"
]

[project.urls]
Homepage = "https://github.com/D-ICE/poem"
Documentation = "https://dice-poem.readthedocs.io/en/latest/"

[project.scripts] # CLI tools
poem_hash = "pypoem.tools.poem_hash:main"
poem_check = "pypoem.tools.poem_check:main"
poem_tree = "pypoem.tools.poem_tree:main"
poem_info = "pypoem.tools.poem_info:main"
poem_version = "pypoem.tools.poem_version:main"
poem_layout = "pypoem.tools.poem_layout:main"
poem_clean = "pypoem.tools.poem_clean:main"
poem_upgrade = "pypoem.tools.poem_upgrade:main"
poem_mount = "pypoem.tools.poem_mount:main"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
build.verbose = false

sdist.include = ["python/pypoem/_version.py"]
#sdist.reproducible = false

cmake.version = ">=3.20"
cmake.build-type = "Release"
cmake.args = [
    "-DPOEM_BUILD_TESTS=OFF",
    "-DPOEM_BUILD_TOOLS=OFF", # TODO: voir pour installer exe ?
    "-DPOEM_ALLOW_DIRTY=ON",
    "-DPOEM_BUILD_PYTHON=ON",
    "-DPOEM_BUILD_POC=OFF",
]
build-dir = "build"
build.targets = ["pypoem"]
build.tool-args = ["-j6"]

#sdist.exclude = [
#    "src/pypoem/CMakeLists.txt",
#    "src/pypoem/pypoem.cpp",
#]

[tool.setuptools_scm]  # Section required
write_to = "python/pypoem/_version.py"
